<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NoteItemsActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/noteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_ip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="4dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/titleShow"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/contentShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/subtitle"
                    android:textColor="#A1887F"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp">

                    <Button
                        android:id="@+id/deleteBTN"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="6dp"
                        android:background="@drawable/ic_delete"
                        android:contentDescription="@string/deleteBtn"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/EditBTN"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="6dp"
                        android:background="@drawable/ic_edit"
                        android:contentDescription="@string/editBtn"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>