<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".EditNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:paddingBottom="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <EditText
                android:id="@+id/inputNoteTitleEt"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="@drawable/bg_ip"
                android:hint="@string/Note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:padding="10sp"
                android:textColorHint="#78909C"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/inputNoteEt"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_ip"
                android:gravity="start"
                android:hint="@string/note_des"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:padding="10sp"
                android:textColorHint="#757575"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitleEt"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="23sp"
            android:layout_height="23sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_outline"
            app:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="23sp"
            android:layout_height="23sp"
            android:layout_marginStart="15sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="23sp"
            android:layout_height="23sp"
            android:layout_marginStart="15sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcons" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/EditBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/background_add_button"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/input_search"
        android:padding="3dp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>